--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body {
   }
 
   img {
+      float: left;
+      margin-right: 10px;
+      margin-bottom: 10px;
       max-width: 100%;
       display: block;
   }
@@ -18,17 +21,25 @@ body {
   }
   
   .grid {
+    display: flex;
+    gap: 20px;
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
   }
   
   nav {
+    position: sticky;
+    top: 0;
+    z-index: 100;
     background-color: #000;
     padding: .5em;
   }
   
   nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -41,6 +52,9 @@ body {
   }
   
   .photos {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -49,3 +63,12 @@ body {
   .feature {
       width: 200px;
   }
+
+  article {
+    flex: 2;
+  }
+
+  aside {
+    flex: 1;
+  }
+
